syntax = "proto3";


package hipstershop.v1;

import "google/protobuf/duration.proto";

option go_package = "protobuf;conf";


message Bootstrap {
    Trace  trace = 1;
    Server server = 2;
    Data data = 3;
    Nacos nacos = 4;
    ZapLog zap_log = 5;
    Services services = 6 ;
}

message ZapLog {
    string level = 1;
    bool show_line = 2;
    string encode_level = 3;
    string stacktrace_key = 4;
}

message Nacos {
    message Server {
        string addr = 1;
        string path = 2;
        int32 port = 3;
        string scheme = 4;
    }
    message Client {
        int32 timeout = 1;
        bool not_load_cache_at_start = 2;
        string log_dir = 3;
        string log_level = 4;
        int32 max_age = 5;
        int32 rotate_time = 6;
    }
    message RequestServer {
        repeated string  clusters = 1;
        string service_name = 2;
        string group_name = 3;
    }
    repeated Server servers = 1;
    Client client = 2;
    string name_space_id = 3;
    string cluster_name = 4;
    string group_name = 5;


}
message Server {
    message HTTP {
        string network = 1;
        string ip = 2;
        int32 port = 3;
        google.protobuf.Duration timeout = 4;
    }
    message GRPC {
        string network = 1;
        string ip = 2;
        int32 port = 3;
        google.protobuf.Duration timeout = 4;
    }
    HTTP http = 1;
    GRPC grpc = 2;
    string service_name = 3;
}

message Data {
    message Database {
        string driver = 1;
        string source = 2;
    }
    message Redis {
        string network = 1;
        string addr = 2;
        string password = 3;
        int32 db = 4;
        google.protobuf.Duration dial_timeout = 5;
        google.protobuf.Duration read_timeout = 6;
        google.protobuf.Duration write_timeout = 7;
    }
    Database database = 1;
    Redis redis = 2;
}

message Trace {
    string endpoint = 1;
    string host_port = 2 ;
}


message Services {
    message Service {
        string server_name = 1;
        repeated  string cluster_name = 2;
        string group_name = 3;
    }
    repeated Service service = 1;
}